Fix attachment metadata styling issue
Fixes a styling issue where long strings of text for external links do not wrap onto a new line, causing them to overlap with some other elements on the page.

--- a/app/assets/stylesheets/govuk_publishing_components/components/_attachment.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_attachment.scss
@@ -67,6 +67,13 @@ $thumbnail-icon-border-colour: govuk-colour("mid-grey", $legacy: "grey-3");
   &:last-of-type {
     margin-bottom: 0;
   }
+
+  .gem-c-attachment__attribute {
+    // From the Design System
+    // Automatic wrapping for unbreakable text (e.g. URLs)
+    word-wrap: break-word; // Fallback for older browsers only
+    overflow-wrap: break-word;
+  }
 }
 
 .gem-c-attachment__metadata--compact {
